<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/navigation_home"
            android:enabled="true"
            android:icon="@drawable/selector_bottom_home"
            app:showAsAction="always"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_statistics"
            android:icon="@drawable/selector_bottom_stat"
            app:showAsAction="always"
            android:title="@string/title_statistic"/>

    <item
            android:id="@+id/navigation_my"
            android:icon="@drawable/selector_bottom_my"
            app:showAsAction="always"
            android:title="@string/title_my"/>

</menu>